--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -34,7 +34,7 @@
           Please enter username
         </div>
         <div *ngIf="signUpFormGroup.controls['username'].errors?.['pattern']" class="alert">
-          Username must start with a letter
+          Username must start with a letter and cannot and with a blank space
         </div>
       </div>
     </div>
